# ghost

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  dev-requirements.txt  ghost.spec  ghost_mac.spec  main.py  pyproject.toml  requirements.txt  run.bat  setup_mac.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
installer/macos/: build_pkg.sh  distribution.xml
installer/macos/Resources/: conclusion.html  welcome.html
installer/macos/scripts/: postinstall
installer/windows/: ghost.iss
scripts/: build_mac.sh  build_windows.bat  make_icons.py  make_pixel_ghost_gif.py  uninstall_mac.sh
src/: api.py  bootstrap.py  capture.py  clone.py  config.py  gpt_client.py  history.py  logging_config.py  mac_focus.py  meeting.py  meeting_processor.py  parser.py  platform_adapter.py  region_selector.py  region_selector_cli.py  scroll_capture.py  sensitive.py  updater.py  version.py  voice.py  win_focus.py
src/api_mixins/: __init__.py  capture.py  chat.py  meeting.py  window.py
src/capture_pkg/: __init__.py  region_picker.py  screenshot.py
src/cloner/: __init__.py  _config.py  _context.py  _paths.py  _playwright_ensure.py  _processors.py  _render_playwright.py  _render_webview.py  web_cloner.py
src/domain/: __init__.py  markdown_parser.py  sensitive_scan.py  version_compare.py
src/infra/: __init__.py  logging_setup.py  paths.py
src/integrations/: __init__.py  github_releases.py  openai_client.py  openai_realtime.py
src/platform/: __init__.py  adapter.py
src/platform/windows/: __init__.py  focus.py  preflight.py
src/recording/: __init__.py  meeting_processor.py  meeting_recorder.py
src/services/: __init__.py  history_service.py  realtime_agent_service.py  settings_service.py  update_service.py
test/: focus-test.html
tests/: conftest.py  test_api_mixin_imports.py  test_config.py  test_domain_version_compare.py  test_e2e_ghost_api.py  test_history.py  test_integrations_github_releases.py  test_parser.py  test_platform_preflight.py  test_sensitive.py  test_services_history.py  test_services_settings.py  test_services_update.py  test_shim_completeness.py  test_voice.py
web/: app.js  dropdown.html  index.html  pixel-ghost.css  response.html  style.css
web/css/: 01-base-and-header.css  02-chat.css  03-composer-and-meeting.css  04-modals.css  05-misc.css  response.css
web/js/: realtime-agent.js  response.js
web/partials/: clone.html  close-confirm.html  help.html  history.html  meeting.html  sensitive.html  settings.html  shortcuts.html
web/shared/: common.js
