[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost"
version = "1.1.31"
description = "Ghost — a Windows desktop AI assistant built with pywebview, Python, Alpine.js and OpenAI. macOS port planned. Non-commercial use only."
readme = "README.md"
requires-python = ">=3.12"
# Custom non-commercial source-available license (see LICENSE file).
license = { file = "LICENSE" }
authors = [
    { name = "Jesus Oliveira", email = "contato.jesusoliveira@gmail.com" },
]
maintainers = [
    { name = "Jesus Oliveira", email = "contato.jesusoliveira@gmail.com" },
]
keywords = [
    "ai",
    "assistant",
    "openai",
    "pywebview",
    "desktop",
    "windows",
    "alpine",
    "non-commercial",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "pywebview[cef]>=5.4,<7",
    "mss>=9.0.2,<11",
    "openai>=1.54,<3",
    "python-dotenv>=1.0.1,<2",
    "pyperclip>=1.9.0,<2",
    "Pillow>=10.4,<14",
    "pyautogui>=0.9.54,<1",
    "pywin32>=311",
    "soundcard>=0.4.3,<1",
    "soundfile>=0.12.1,<1",
    "numpy>=1.26,<3",
    "imageio>=2.37,<3",
    "imageio-ffmpeg>=0.5,<1",
    "pynput>=1.7,<2",
    "httpx>=0.27,<1",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "reportlab>=4.2",
    "types-Pillow",
    "pre-commit>=3.8",
]

[project.urls]
Homepage = "https://github.com/userJesus/ghost"
Repository = "https://github.com/userJesus/ghost"
Issues = "https://github.com/userJesus/ghost/issues"
Changelog = "https://github.com/userJesus/ghost/releases"
Author_LinkedIn = "https://www.linkedin.com/in/ojesus"
Author_GitHub = "https://github.com/userJesus"

[project.scripts]
ghost = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "SIM",
    "TID",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806", "SIM", "B", "A"]
# Win32 constants and idiomatic Windows code use uppercase names (SWP_NOMOVE etc.)
"src/win_focus.py" = ["N806", "SIM105"]
"src/platform/windows/focus.py" = ["N806", "SIM105"]
"src/platform/windows/preflight.py" = ["N806"]
# Win32 SDK constants (CREATE_NO_WINDOW, CREATE_NEW_PROCESS_GROUP, etc.)
# used in the installer-launch path.
"src/services/update_service.py" = ["N806"]
"src/api.py" = ["N806", "SIM105"]
"main.py" = ["N806", "SIM105"]
# Copies of pre-refactor code — inherit the pre-refactor lint tolerance.
# These files were moved into the new package structure via `cp`, so the
# same rules that allowed them before still apply. Refactoring their
# content is out of scope for the 2026-04 architecture pass.
# The old web_cloner.py was split into 7 files (web_cloner + 6 private _*.py).
# The pre-split patterns (semicolon statements, Win32 constants, SIM shortcuts)
# migrated verbatim into the sub-files — same tolerance applies.
"src/cloner/web_cloner.py" = ["E701", "E702", "N806", "SIM103", "SIM105"]
"src/cloner/_context.py" = ["E701", "E702", "N806", "SIM103", "SIM105"]
"src/cloner/_processors.py" = ["E701", "E702", "N806", "SIM103", "SIM105"]
"src/cloner/_render_webview.py" = ["E701", "E702", "N806", "SIM103", "SIM105"]
"src/cloner/_render_playwright.py" = ["E701", "E702", "N806", "SIM103", "SIM105"]
"src/capture_pkg/scroll.py" = ["B905"]
"src/recording/meeting_recorder.py" = ["N806"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
no_implicit_optional = true
disallow_untyped_defs = false
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "win32gui",
    "win32con",
    "win32api",
    "win32process",
    "soundcard",
    "soundfile",
    "mss.*",
    "pynput.*",
    "pywebview.*",
    "webview",
    "imageio.*",
    "pyautogui",
    "pyperclip",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "windows_only: marks tests that only run on Windows",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]
